samples/_failures_safe/1761646694_a4f637_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2196e8e6.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
